Make sure that changes to the "span" attribute on a colgroup actually work. Bug 404309, r=bernd, sr=dbaron, a=beltzner